Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjTextObj.quorum
class Main
    action Main
        Text v
        v:SetValue("text")
        Test(v)
    end

    action Test(Boolean var)
    end
end
